complete word progress remove mutex from repo
